# vmidbg

./: COPYING  Makefile.am  README  TODO  configure.ac
src/: Makefile.am  vmidbg.c  vmidbg.h
